align product buttons center, fix home image width, add email in contact us

--- a/src/components/Ayurveda.css
+++ b/src/components/Ayurveda.css
@@ -7,6 +7,7 @@
     height: 70vh;
     width: 50vw;
     filter: brightness(100%);
+    margin-top: 30px;
 }
 
 .ayurveda_benefits_text {
