--- a/src/components/Certifications.css
+++ b/src/components/Certifications.css
@@ -4,7 +4,7 @@
 }
 
 .certification_image_container {
-    width: 50%;
+    width: 70%;
     height: 100%;
 }
 
